--- a/style.css
+++ b/style.css
@@ -162,22 +162,50 @@ ________________________
 
 .item1{
     background-color: rgb(255, 190, 225);
+    position: sticky;
+    top:50px;
+    left:50px;
+
 }
 
 .item2{
     background-color: rgb(131, 204, 233)
+    
+
+
+
+
 }
 
-/*
+.box__percent {
+    width: 50%;
+    }
+    .box__pixels {
+    width: 200px;
+    }
 ________________________
 Units
 ________________________
-*/
+
 .box__container {
     height: auto;
     margin: 10px;
     width: 70%;
 }
+.font__container {
+    height: auto;
+    margin: 10px;
+    font-size: 25px;
+    }
+    .font__1em {
+    font-size: 1em;
+    }
+    .font__1rem {
+    font-size: 1rem;
+    }
+    .font__100percent {
+    font-size: 100%;
+    }
 .box {
     border: 1px solid var(--grey-900);
     height: auto;
@@ -194,7 +222,10 @@ ________________________
 
 /*
 ________________________
-Flex
+flex-direction:column-reverse;
+flex-wrap:wrap-reverse;
+justify-content:center;
+align-content:space-between;
 ________________________
 */
 .flex__container {
@@ -203,6 +234,24 @@ ________________________
     align-items: center;
 }
 
+@media screen and (max-width:600px) {
+
+    .media__container{
+        height: 20vh;
+        width: 90vw;
+        margin-bottom: 50px;
+        background-color: var(--primary-100);
+    }   
+}
+@media screen and (min-width:200px) , (max-width:300px){
+
+    .media__container{
+        height: 20vh;
+        width: 90vw;
+        margin-bottom: 50px;
+        background-color: var(--primary-200);
+    }   
+}
 /*
 ________________________
 Media Queries
